v8.8.1/_sources/generated/pcdsdevices.slits.BeckhoffSlitPositioner.rst.txt
pcdsdevices.slits.BeckhoffSlitPositioner
========================================

.. currentmodule:: pcdsdevices.slits

.. autoclass:: BeckhoffSlitPositioner

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - readback (FCpt)
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``{prefix}:ACTUAL_{_dirlong}``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.slits.BadSlitPositionerBase`
    
        * - setpoint (FCpt)
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``{prefix}:{_dirshort}_REQ``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.slits.BadSlitPositionerBase`
    
        * - done
          - :class:`~ophyd.signal.Signal`
          - 
          - 
          - omitted
          - 
    
        * - actuate
          - :class:`~ophyd.signal.Signal`
          - 
          - 
          - omitted
          - 
    

    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: mv_ginput
    .. automethod:: mvr
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set
    .. automethod:: set_defaults
    .. automethod:: set_position
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: tweak
    .. automethod:: umv
    .. automethod:: umvr
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: actuate_value
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: done_value
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: position
    .. autoattribute:: put_complete
    .. autoattribute:: settle_time
    .. autoattribute:: stop_signal
    .. autoattribute:: stop_value
    .. autoattribute:: subscriptions
    .. autoattribute:: timeout
    
    